# roamr

./: .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md
CAD/: 00_STATIV_PHONE_HOLDER.SLDASM  01_STATIV_BASE.SLDPRT  02_PHONE_BASE_BRASSNUTM5&6.SLDPRT  02_PHONE_BASE_HEXANUTM5&6.SLDPRT  03_PHONE_CLIP.SLDPRT  04_NUT_M5x12.SLDPRT  93655A358_Male-Female Threaded Hex Standoff.SLDPRT  BLDC_Mount.SLDPRT  Ball_Caster_Mount.SLDPRT  Ball_Caster_Mount_BLDC_VER.SLDPRT  Bottom_Body.SLDPRT  Bottom_Body_BLDC_VER.SLDPRT  Li-Ion_Battery.SLDPRT  Motor_Assembly.SLDASM  Motor_Driver_MDD3A.SLDASM  Motor_Mount.SLDPRT  Top_Body.SLDPRT  iphone 15 Pro.SLDPRT
CAD/STLs/: caster fake.SLDPRT  caster fake.STL  wheels.SLDPRT  wheels.STL  ~$caster fake.SLDPRT
WASM/: README.md  add.c  add.cpp  add.wasm  imu.h  lidar_camera.h  main.c  map.cpp  map.wasm  slam_main.cpp  slam_main.wasm  telemetry.cpp  telemetry.h  test.c  wasm_utils.h
embedded/: README.md
embedded/ble-test/: .gitignore  CMakeLists.txt  README.md  pytest_ble-test.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
embedded/ble-test/main/: CMakeLists.txt  foc_dual_motor.cpp  main.c
embedded/foc/: foc.cpp
iOS/: Build roamr_2025-11-21T17-33-56.txt  CMakeLists.txt  README.md  SENSORS.md
iOS/roamr/: ContentView.swift  WASM  roamr-Bridging-Header.h  roamr.swift
iOS/roamr.xcodeproj/: project.pbxproj
iOS/roamr/Components/: Icon.swift  JoystickView.swift  TabBar.swift  WebView.swift
iOS/roamr/Extensions/: Color+Extensions.swift  SafeAreaInsets.swift
web/: README.md  video-stream.html
webpage/: index.html
(+26 files in other folders)
